--- a/MODTPL/views/MODTPL_view.xml
+++ b/MODTPL/views/MODTPL_view.xml
@@ -21,6 +21,7 @@
             <tree string="Label">
                 <field name="name"/>
                 <field name="user_id"/>
+                <field name="state"/>
             </tree>
             </field>
         </record>
@@ -34,6 +35,7 @@
             <form string="Label">
                 <field name="name"/>
                 <field name="user_id"/>
+                <field name="state"/>
             </form>
             </field>
         </record>
