--- a/vhr_web_extra/views/extra.xml
+++ b/vhr_web_extra/views/extra.xml
@@ -7,5 +7,14 @@
                 <script type="text/javascript" src="/vhr_web_extra/static/src/js/extra.js"></script>
             </xpath>
         </template>
+    	<template id="vhr_web_extra.fold_unfold" name="Extra button" inherit_id="web.menu_secondary">
+            <xpath expr="//a[@class='oe_logo']" position="after">
+                <!-- FOLD AND UNFOLD MENU-->
+                <div class="oe_toggle_secondary_menu">
+                    <span class="oe_menu_fold" title="Fold menu">«</span>
+                    <span class="oe_menu_unfold" title="Unfold menu">»</span>
+                </div>
+            </xpath>
+    	</template>
     </data>
 </openerp>
